2000-05-30  Mo DeJong  <mdejong@cygnus.com>

	* src/config.cpp:
	* src/config.h: Removed. These two
	files were part of the old build
	system. They should have been removed
	when the new build system was merged.

2000-05-23  Mo DeJong  <mdejong@cygnus.com>

	* Makefile.in:
	* src/Makefile.in: Removed to make way for
	new automake based build system.

	* AUTHORS:
	* COPYING:
	* INSTALL:
	* Makefile.am:
	* Makefile.in:
	* NEWS:
	* acinclude.m4:
	* aclocal.m4:
	* autogen.sh:
	* configure.in:
	* doc/Makefile.am:
	* doc/Makefile.in:
	* src/Makefile.am:
	* src/Makefile.in:
	* src/stamp-h.in: Added or updated files to support
	automake version of the build system.

2000-05-22  Mo DeJong  <mdejong@cygnus.com>

	* src/error.cpp (PrintTYPED_METHOD_WITH_NO_RETURN):
	Fixed typo in error message.
	* src/zip.cpp (Zip): Removed extra semicolon.
	* src/m4/acx_check_pathname_style.m4: Removed comment.

2000-05-13  Mo DeJong  <mdejong@cygnus.com>

	* configure.in: Fixed up mkdir test so
	that it should work under a Mac style
	build environment.
	src/platform.cpp (SystemMkdir): Added
	mkdir() call for the Mac.

2000-05-12  Mo DeJong  <mdejong@cygnus.com>

	* configure.in: Added patches for ICC
	floating point bug detection sent
	in by Chris Abbey <cabbey@home.net>.

2000-05-11  Mo DeJong  <mdejong@cygnus.com>

	* src/access.h:
	* src/ast.cpp:
	* src/ast.h:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/case.cpp:
	* src/case.h:
	* src/class.h:
	* src/code.cpp:
	* src/code.h:
	* src/control.cpp:
	* src/control.h:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/depend.h:
	* src/diagnose.cpp:
	* src/diagnose.h:
	* src/double.cpp:
	* src/double.h:
	* src/dump.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/getclass.h:
	* src/incrmnt.cpp:
	* src/init.cpp:
	* src/java.g:
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h:
	* src/jikes.cpp:
	* src/jikesapi.cpp: