@@ -1,3 +1,13 @@
+2000-06-03  Mo DeJong  <mdejong@redhat.com>
+
+	* src/decl.cpp (CheckPackage): Removed
+	error generated by jikes when a package
+	named in a package statement could not
+	be found on the CLASSPATH. This behavior
+	did not match javac or other compilers
+	and it makes it very difficult to use
+	jikes for regression testing.
+
 2000-05-30  Mo DeJong  <mdejong@cygnus.com>
 
 	* src/config.cpp:
